--- a/DOT_RNAfinder.cfg
+++ b/DOT_RNAfinder.cfg
@@ -1,165 +1,332 @@
+#
+# This file is used by RNAfinder to allow it to run erpin in order
+# to identify RNA in genome.
+#	
+# Its format is a list of entry, each entry must start by 'Name = block_name'.
+# Each entry is composed of block item. 
+# Each block begins with 'Item' and ends with 'EndItem'.
+#
+# Each Item is composed by diferrent fields, some are mandatory others are optional.
+#
+# Each field must have the following format :
+# field_name = Field_value
+# field_comment = Comment_value
+# order      : order used for run program.
+# ToFus      : 0 if models not need to be merged else 1.
+#
+# Mandatory fields :
+#
+#    comment    : comment about model.
+#    erpin_arg  : list of erpin argument.
+#    cutoff     : cutoff for erpin.
+#    model_file : file name of the model erpin.
+#
+#
+# Optional fields :
+#    
+#    label      : used for certain RNA like introns, in order to differentiate RNA
+#    comment    : comments about the model, will be display in Usage
+#    pos_ac     : anticodon position in secondary structure used by erpin
+#    module     : number of modules separated by a comma is used to select the results of erpin, 
+#                 when different models are used to define different parts of the same RNA.
+#    to_comment : 1 if AnnotPair for Mfannot need to be in comment
+#
+# This file is parsed by the perl class PirObject::RNAfinderFileForMenu;
+#
+#
 
-#
-# This file is used by RNAfinder to allow it to run RNASpinner programs
-# used to identify RNAs gene; its format is a list of
-# records that associate a list of BASH commands to a RNA name
-#
-# The commands can contain pseudo variables in the format
-# "%NAME%" that will be substituted by RNAfinder before
-# the commands are executed; the available pseudo variables are:
-#
-#   %GENOMEFILE%
-#
-#      A file containing the genome sequence to search, in FASTA
-#      format.
-#
-#   %OUTFILE%
-#
-#      Will be replace by RNAfinder, it's in temporary directory created by
-#      the program.
-#
-# Foreach called at RNASpinner the option -A must be set with %OUTFILE% argument
-# The var %OUTFILE% is replaced by RNAfinder, this file is created by RNAfinder in
-# temporary work directory.
-#
-#
-# This file is parsed by the perl class PirObject::ConfigFile;
-# 
-# Foreach RNA block we can set an option 'Int'. This option can take 
-# two value : minimal or full. Default value is 'minimal'. 
-# If the option is set to 'minimal' RNAfinder must run the command until
-# they found one result.
-# If the option is set to 'full' RNAfinder must run all the command define 
-# in model and it choose the best results at the end.
-# For the differents introns block this option must always be set to
-# 'full'.
-#
-#
+#--------------------------------------------------------------------------------------------------------
+#                                           rns
+#--------------------------------------------------------------------------------------------------------
 
+# Used for identification of rns
+Name    = rns
+comment = rns_model
+order   = 5
+ToFus   = 0
+
+# Identification rns-total:
+Item
+    erpin_arg       = "1,29 -add 2 3 -add 4 6 -add 26 27 28 -logzero -5"
+    cutoff          = 3 41 80
+    model_file      = rns-mt.epn
+    module          = 1,2
+    comment         = rns (complete)
+    comment_for_MFa = complete
+EndItem
+
+# Identification rns-5':
+Item
+    erpin_arg  = "1,29 -add 2 3 -add 4 6  -logzero -5"
+    cutoff     = 2 38
+    model_file = rns-mt.epn
+    module     = 1
+    comment    = rns (5' portion)
+    comment_for_MFa = 5'
+EndItem
+
+# Identification rns-3':
+Item
+    erpin_arg  = "1,29 -add 27 28 -add 24 26 -logzero -5"
+    cutoff     = 9 42
+    model_file = rns-mt.epn
+    module     = 2
+    comment    = rns (3' portion)
+    comment_for_MFa = 3'
+EndItem
 
 #--------------------------------------------------------------------------------------------------------
 #                                           tRNAs
 #--------------------------------------------------------------------------------------------------------
 
-# This set of commands identifies tRNAs.
-GeneName = tRNA
+# Used for identification of tRNA
+Name    = tRNA
+comment = tRNA with and without intron
+order   = 1
+ToFus   = 1,0,tRNA
 
+Item
+    erpin_arg  = "-1,19 -add 1 17 18 -add 11 12 14 -add 2 3 4 5 7 -logzero -5"
+    cutoff     = 2.9 8 30
+    model_file = tRNA/tRNA.epn
+    pos_ac     = 13
+    comment    = tRNAs without introns
+    gap_to_end = 13
+EndItem
 
-ModelList
-All : tRNA
-EndModelList
+Item
+    erpin_arg  = "-1,19 -add 1 17 18 -add 11 12 14 -add 2 3 4 5 7 -logzero -5"
+    cutoff     = 9 18 30
+    model_file = tRNA/yeast.epn
+    pos_ac     = 13
+    comment    = tRNAs without introns
+    gap_to_end = 13
+EndItem
 
+Item
+    erpin_arg  = "-1,26 -add 2 3 5 7 9 -add 1 -add 24 25 -add 11 12 14 -add 16 17 18 20 -logzero -5"
+    cutoff     = 12 18 30 39 60
+    model_file = tRNA/tRNAint_mt.epn
+    pos_ac     = 13
+    comment    = tRNAs mt with intron
+    gap_to_end = 13
+    comment_for_MFa = with intron
+    to_comment      = 1
+EndItem
 
-CommandList
-tRNA : RNASpinner -A %OUTFILE% -m %MODELDIR%/tRNA.epn -g %GENOMEFILE% \
-                -e "-1,19 -add 1 17 18 -add 11 12 14 -add 2 3 5 7 -logzero -5 -cutoff 2.9 8 30"
-EndCommandList
-
+Item
+    erpin_arg  = "-1,26 -add 2 3 5 7 9 -add 1 -add 24 25 -add 11 12 14 -add 16 17 18 20 -logzero -5"
+    cutoff     = 12 18 30 39 60
+    model_file = tRNA/tRNAint_cp.epn
+    pos_ac     = 13
+    comment    = tRNAs cp with intron
+    gap_to_end = 13
+    comment_for_MFa = with intron
+    to_comment      = 1
+EndItem
 
 #--------------------------------------------------------------------------------------------------------
 #                                           rnpB
 #--------------------------------------------------------------------------------------------------------
 
-# This set of commands identifies rnpB.
-GeneName = rnpB
+# Used for identification of rnpB
+Name    = rnpB
+comment = rnpB_model
+order   = 3
+ToFus   = 0
 
+# rnpB (RNase P RNA), generale:
+Item
+    erpin_arg  = "1,10 -add 2 4 -add 3 5 -add 8 9 -logzero -5"
+    cutoff     = 2.5 12 17
+    model_file = rnpB-mito.epn
+    comment    = rnpB (mito + plastid)
+EndItem
 
-ModelList
-All     : rnpB_simple,rnpB_complex
-Simple  : rnpB_simple
-Complex : rnpB_complex
-EndModelList
-
-
-CommandList
-rnpB_simple  : RNASpinner -A %OUTFILE% -m %MODELDIR%/rnpB-mito.epn -g %GENOMEFILE% \
-                        -e "1,10 -add 2 4 -add 3 5 -add 8 9 -logzero -5 -cutoff 2.5 12 17"
-rnpB_complex : RNASpinner -A %OUTFILE% -m %MODELDIR%/rnpB-f.epn    -g %GENOMEFILE% \
-                        -e "1,37 -add 8 10 -add 9 11 -add 2 34 35 -add 15 17 18 20  -add 5 6 -add 4 -add 12 14 28 -add 21 22 23 -add 30 32 -logzero -5 -cutoff 2.9 18 29 41 47 53 57 61 72"
-EndCommandList
+# Derived:
+Item
+    erpin_arg  = "1,10 -add 2 4 -add 3 5 -add 8 9 -logzero -5"
+    cutoff     = 2.5 12 15
+    model_file = rnpB-derived.epn
+    comment    = rnpB, derived (mito + plastid)
+EndItem
 
 #--------------------------------------------------------------------------------------------------------
 #                                           rrn5
 #--------------------------------------------------------------------------------------------------------
 
-# This set of commands identifies rrn5.
-GeneName = rrn5
+# Used for identification of rrn5
+Name    = rrn5
+comment = rrn5_model
+order   = 4
+ToFus   = 0
+
+# Partial:
+Item
+    erpin_arg       = "1,19 -add 7 8 9 10 -add 4 5 -add 14 15 -add 2 -logzero -5"
+    cutoff          = 15 16 20 24
+    model_file      = 5S-mito.epn
+    comment         = 5S RNA (complete)
+    comment_for_MFa = complete
+EndItem
+
+# Core :
+Item
+    erpin_arg       = "1,19 -add 7 8 9 10 -logzero -5"
+    cutoff          = 24
+    model_file      = 5S-mito.epn
+    comment         = 5S RNA (only core region)
+    comment_for_MFa = only core
+EndItem
 
 
-ModelList 
-All     : rrn5_simple,rrn5_complex
-Simple  : rrn5_simple
-Complex : rrn5_complex
-EndModelList
-
-
-CommandList
-rrn5_simple  : RNASpinner -A %OUTFILE% -m %MODELDIR%/5S-mito.epn -g %GENOMEFILE% \
-                        -e "1,19 -add 7 8 9 10 -logzero -5 -cutoff 10"
-rrn5_complex : RNASpinner -A %OUTFILE% -m %MODELDIR%/5S-mito.epn -g %GENOMEFILE% \
-                        -e "1,19 -add 7 8 9 10 -add 4 5 -add 14 15 -add 2 -logzero -5 -cutoff 15 16 20 24"
-EndCommandList
 
 #--------------------------------------------------------------------------------------------------------
 #                                           Introns Group I
 #--------------------------------------------------------------------------------------------------------
 
-# This set of commands identifies introns of group I using RNAweasel and multiple erpin models.
-GeneName = IntronI
-Int      = full
+# Used for identification of group I introns
+Name    = IntronI
+comment = IntronI_model
+order   = 6
+ToFus   = 0
 
-ModelList 
-All     : IB,IC1,IC2,IBINS,IA,IA3,ID,I_Ader,I_Bder1,I_Bder2
-IB      : IB
-IC1     : IC1
-IC2     : IC2
-IBINS   : IBINS
-IA      : IA
-IA3     : IA3
-ID      : ID
-I_Ader  : I_Ader
-I_Bder1 : I_Bder1
-I_Bder2 : I_Bder2
-EndModelList
+Item
+    erpin_arg  = "2,25 -add 2 4 5 6 -add 3 8 9 10 12 17 -add 13 14 15 16 19 21 -logzero -5"
+    cutoff     = 10 21 45
+    model_file = Introns/B-327.epn
+    label      = IB
+    comment    = intron IB (complete)
+EndItem
 
+Item
+    erpin_arg  = "2,24 -add 4 5 6 -add 3 8 10 -add 9 13 14 15 16 19 21 -logzero -5"
+    cutoff     = 12 26 40
+    model_file = Introns/B-ins.epn
+    label      = IB
+    comment    = intron IB (extra insertion)
+EndItem
 
-CommandList
-IB      : RNASpinner -A %OUTFILE% -m %MODELDIR%/Introns/B-327.epn -L 'IB'         \
-                   -g %GENOMEFILE% -e "2,14 -add 2 4 5 6 -add 3 8 9 10 -add 13 14 15 16 19 21 -logzero -5 -cutoff 2 2 32"
-IC1     : RNASpinner -A %OUTFILE% -m %MODELDIR%/Introns/C1.epn    -L 'IC1'        \
-                   -g %GENOMEFILE% -e "1,27 -add 5 7 8 4 9-add 3 11 13 14 16 -add 17 18 19 20 23 26 -logzero -2 -cutoff 10 40 40"
-IC2     : RNASpinner -A %OUTFILE% -m %MODELDIR%/Introns/C2.epn    -L 'IC2'        \
-                   -g %GENOMEFILE% -e "1,26 -add 5 6 4 7 -add 3 9 11 12 14 -add 15 16 17 18 21 24 -logzero -2 -cutoff 12 30 30"
-IBINS   : RNASpinner -A %OUTFILE% -m %MODELDIR%/Introns/B-ins.epn -L 'IBINS'      \
-                   -g %GENOMEFILE% -e "2,14 -add 4 5 6 -add 3 8 10 -add 9 13 14 15 16 19 21 -logzero -5 -cutoff 12 26 40"
-IA      : RNASpinner -A %OUTFILE% -m %MODELDIR%/Introns/A.epn     -L 'IA'         \
-                   -g %GENOMEFILE% -e "2,23 -add 4 5 6 7 8 -add 18 15 16 17 -add 3 4 11 12 14 20 -logzero -5 -cutoff 7 24 30"
-IA3     : RNASpinner -A %OUTFILE% -m %MODELDIR%/Introns/A3.epn    -L 'IA3'        \
-                   -g %GENOMEFILE% -e "2,14 -add 4 5 6 -add 3 8 10 -add 9 13 14 15 16 19 21 -logzero -5 -cutoff 12 26 40"
-ID      : RNASpinner -A %OUTFILE% -m %MODELDIR%/Introns/D.epn     -L 'ID'         \
-                   -g %GENOMEFILE% -e "2,21 -add 2 3 4 6 -add 5 8 9 -add 11 12 13 14 15 -add 17 18 20 21 -logzero -5 -cutoff 5 11 30 30"
-I_Ader  : RNASpinner -A %OUTFILE% -m %MODELDIR%/Introns/Ader.epn  -L 'I(derived)' \
-                   -g %GENOMEFILE% -e "2,21 -add 15 -add 12 13 14 -add 4 -add 8 -add 19 -logzero -2 -cutoff 7 9 10 11 22"
-I_Bder1 : RNASpinner -A %OUTFILE% -m %MODELDIR%/Introns/Bder1.epn -L 'I(derived)' \
-                   -g %GENOMEFILE% -e "2,21 -add 15 -add 12 13 14 -add 4 8 19 -logzero -5 -cutoff 7 11 27"
-I_Bder2 : RNASpinner -A %OUTFILE% -m %MODELDIR%/Introns/Bder2.epn -L 'I(derived)' \
-                   -g %GENOMEFILE% -e "2,21 -add 15 -add 12 13 14 -add 4 8 19 -logzero -5 -cutoff 7 11 27"
-EndCommandList
+Item
+    erpin_arg  = "2,25 -add 2 4 5 6 -add 3 8 9 10 -add 12 17 -logzero -5"
+    cutoff     = 8 12 28
+    model_file = Introns/B-327.epn
+    label      = IB(5')
+    comment    = intron IB (5', partial)
+EndItem
+
+Item
+    erpin_arg  = "2,25 -add 13 14 15 16 17 12 19 21 -logzero -5"
+    cutoff     = 29
+    model_file = Introns/B-327.epn
+    label      = IB(3')
+    comment    = intron IB (3', partial)
+EndItem
+   
+Item
+    erpin_arg  = "2,23 -add 4 5 6 7 8 12 -add 10 15 16 17 18 -add 3 11 14 20 -logzero -5"
+    cutoff     = 10.5 28 38
+    model_file = Introns/A.epn
+    label      = IA
+    comment    = intron IA
+EndItem
+
+Item
+    erpin_arg  = "2,23 -add 4 5 6 7 8 12 -add 3 10 11 14 15 -logzero -5"
+    cutoff     = 9 21
+    model_file = Introns/A.epn
+    label      = IA(5')
+    comment    = intron IA (5' partial)
+EndItem
+
+Item
+    erpin_arg  = "2,21 -add 15 -add 12 13 14 -add 4 -add 8 -add 19 -logzero -5"
+    cutoff     = 7 9 10 11 22
+    model_file = Introns/Ader.epn
+    label      = I(derived)
+    comment    = intron I (derived, A)
+EndItem
+
+Item
+    erpin_arg  = "2,21 -add 15 -add 12 13 14 -add 4 8 19 -logzero -5" 
+    cutoff     = 7 11 27
+    model_file = Introns/Bder1.epn
+    label      = I(derived)
+    comment    = intron I (derived, B1)
+EndItem
+
+Item
+    erpin_arg  = "2,21 -add 2 4 5 6 -add 3 8 9 -add 11 12 13 14 15 -add 17 18 20 21 -logzero -5" 
+    cutoff     = 5.5 17 33 45
+    model_file = Introns/D.epn
+    label      = ID
+    comment    = intron ID
+EndItem
+
+Item
+    erpin_arg  = "1,25 -add 4 5 6 7 -add 3 2 9 10 11 12 -add 15 16 17 18 19 20 21 24 -logzero -5"
+    cutoff     = 16 36 55
+    model_file = Introns/B-alt.epn
+    label      = IB
+    comment    = intron IB (extra group)
+EndItem
+
+Item
+    erpin_arg  = "1,25 -add 5 7 8 4 -add 3 10 11 12 14 -add 15 16 17 18 20 21 23 24 -logzero -5"
+    cutoff     = 13 30 45
+    model_file = Introns/C1.epn
+    label      = IC1
+    comment    = intron IC1
+EndItem
+    
+Item
+    erpin_arg  = "1,25 -add 5 6 4 7 -add 3 9 11 12 14 -add 15 16 17 18 19 20 23 24 -logzero -5"
+    cutoff     = 13 38 61
+    model_file = Introns/C2.epn
+    label      = IC2
+    comment    = intron IC2
+EndItem
+    
+Item
+    erpin_arg  = "2,25 -add 2 4 5 6 -add 3 8 9 10 12 -add 13 14 15 16 19 21 -logzero -5"
+    cutoff     = 12 27 50
+    model_file = Introns/A3.epn
+    label      = IA3
+    comment    = intron IA3
+EndItem
+
+Item
+    erpin_arg  = "2,21 -add 15 -add 12 13 14 -add 4 8 19 -logzero -5"
+    cutoff     = 7 11 27
+    model_file = Introns/Bder2.epn
+    label      = I(derived)
+    comment    = intron I (derived, B2)
+EndItem
 
 #--------------------------------------------------------------------------------------------------------
 #                                           Introns Group II
 #--------------------------------------------------------------------------------------------------------
 
-# This set of commands identifies introns of group II using RNAweasel
-GeneName = IntronII
-Int      = full
+# Used for identification of group II introns
+Name    = IntronII
+comment = IntronII_model
+order   = 7
+ToFus   = 0
 
-ModelList
-All : II
-EndModelList
+Item
+    erpin_arg  = "1,13 -add 2 3 -add 5 7 9 -logzero -5" 
+    cutoff     = 10 20
+    model_file = Introns/domV-mito-521.epn
+    label      = II
+    comment    = intron II (domainV)
+EndItem
 
-CommandList
-II : RNASpinner -A %OUTFILE% -m %MODELDIR%/Introns/domV-mito-521.epn -L 'II' \
-              -g %GENOMEFILE% -e "1,13 -add 2 3 -add 5 7 9 -logzero -5 -cutoff 10 18"
-EndCommandList
+Item
+    erpin_arg  = "1,13 -add 2 3 5 7 9 -logzero -5" 
+    cutoff     = 25
+    model_file = Introns/domV-cp-comp.epn
+    label      = II(derived)
+    comment    = intron II, derived
+EndItem
+
 
