[FIX] update config file

--- a/DOT_RNAfinder.cfg
+++ b/DOT_RNAfinder.cfg
@@ -1,9 +1,9 @@
 #
 # This file is used by RNAfinder to allow it to run erpin in order
 # to identify RNA in genome.
-#	
+#
 # Its format is a list of entry, each entry must start by 'Name = block_name'.
-# Each entry is composed of block item. 
+# Each entry is composed of block item.
 # Each block begins with 'Item' and ends with 'EndItem'.
 #
 # Each Item is composed by diferrent fields, some are mandatory others are optional.
@@ -23,11 +23,11 @@
 #
 #
 # Optional fields :
-#    
+#
 #    label      : used for certain RNA like introns, in order to differentiate RNA
 #    comment    : comments about the model, will be display in Usage
 #    pos_ac     : anticodon position in secondary structure used by erpin
-#    module     : number of modules separated by a comma is used to select the results of erpin, 
+#    module     : number of modules separated by a comma is used to select the results of erpin,
 #                 when different models are used to define different parts of the same RNA.
 #    to_comment : 1 if AnnotPair for Mfannot need to be in comment
 #
@@ -200,6 +200,22 @@ Item
 EndItem
 
 Item
+    erpin_arg  = "1,22 -add 5 6 7 -add 2 3 8 9 -add 11 12 15 16 17 18 20 21 -logzero -3"
+    cutoff     = 2 6 10
+    model_file = Introns/B3.epn
+    label      = IB
+    comment    = intron IB (3)
+EndItem
+
+Item
+    erpin_arg  = "2 4 5 6 -add 3 8 9 10 12 17 -add 13 14 15 16 19 21 22 -logzero -3"
+    cutoff     = 10 15 30
+    model_file = Introns/B.epn
+    label      = IB
+    comment    = intron IB (3)
+EndItem
+
+Item
     erpin_arg  = "2,24 -add 4 5 6 -add 3 8 10 -add 9 13 14 15 16 19 21 -logzero -5"
     cutoff     = 12 26 40
     model_file = Introns/B-ins.epn
@@ -222,21 +238,13 @@ Item
     label      = IB(3')
     comment    = intron IB (3', partial)
 EndItem
-   
-Item
-    erpin_arg  = "2,23 -add 4 5 6 7 8 12 -add 10 15 16 17 18 -add 3 11 14 20 -logzero -5"
-    cutoff     = 10.5 28 38
-    model_file = Introns/A.epn
-    label      = IA
-    comment    = intron IA
-EndItem
 
 Item
-    erpin_arg  = "2,23 -add 4 5 6 7 8 12 -add 3 10 11 14 15 -logzero -5"
-    cutoff     = 9 21
-    model_file = Introns/A.epn
-    label      = IA(5')
-    comment    = intron IA (5' partial)
+    erpin_arg  = "1,24 -add 2 4 5 6 7 -add 3 8 -add 10 18 15 16 17 -add 11 12 14 20 22 23 -logzero -3"
+    cutoff     = 2 6 8 12
+    model_file = Introns/A1.epn
+    label      = IA1
+    comment    = intron IA
 EndItem
 
 Item
@@ -248,7 +256,7 @@ Item
 EndItem
 
 Item
-    erpin_arg  = "2,21 -add 15 -add 12 13 14 -add 4 8 19 -logzero -5" 
+    erpin_arg  = "2,21 -add 15 -add 12 13 14 -add 4 8 19 -logzero -5"
     cutoff     = 7 11 27
     model_file = Introns/Bder1.epn
     label      = I(derived)
@@ -256,8 +264,8 @@ Item
 EndItem
 
 Item
-    erpin_arg  = "2,21 -add 2 4 5 6 -add 3 8 9 -add 11 12 13 14 15 -add 17 18 20 21 -logzero -5" 
-    cutoff     = 5.5 17 33 45
+    erpin_arg  = "1,22 -add 2 4 5 6 8 -add 9 11 15  -add 3 12 13 14 16 18 20 21 -logzero -3"
+    cutoff     = 3 6 10
     model_file = Introns/D.epn
     label      = ID
     comment    = intron ID
@@ -272,24 +280,24 @@ Item
 EndItem
 
 Item
-    erpin_arg  = "1,25 -add 5 7 8 4 -add 3 10 11 12 14 -add 15 16 17 18 20 21 23 24 -logzero -5"
-    cutoff     = 13 30 45
+    erpin_arg  = "1,24 -add 5 6 7 -add 4 8 10 12 13  -add 2 3 15 19 20 -add 16 17 18 22 23 -logzero -3"
+    cutoff     = 4 8 10 20
     model_file = Introns/C1.epn
     label      = IC1
     comment    = intron IC1
 EndItem
-    
+
 Item
-    erpin_arg  = "1,25 -add 5 6 4 7 -add 3 9 11 12 14 -add 15 16 17 18 19 20 23 24 -logzero -5"
-    cutoff     = 13 38 61
+    erpin_arg  = "1,27 -add 4 5 6 7 9 12 -add 10 11 14 15 2 3 -add  16 17 18 19 21 22 24 25 26 -logzero -3"
+    cutoff     = 6 15 17
     model_file = Introns/C2.epn
     label      = IC2
     comment    = intron IC2
 EndItem
-    
+
 Item
-    erpin_arg  = "2,25 -add 2 4 5 6 -add 3 8 9 10 12 -add 13 14 15 16 19 21 -logzero -5"
-    cutoff     = 12 27 50
+    erpin_arg  = "1,23 -add 4 5 6 8 -add 9 10 12 13 -add 3 14 15 16 18 -add 19 21 22 -logzero -3"
+    cutoff     = 8 10 12 14
     model_file = Introns/A3.epn
     label      = IA3
     comment    = intron IA3
@@ -314,7 +322,7 @@ order   = 7
 ToFus   = 0
 
 Item
-    erpin_arg  = "1,13 -add 2 3 -add 5 7 9 -logzero -5" 
+    erpin_arg  = "1,13 -add 2 3 -add 5 7 9 -logzero -5"
     cutoff     = 10 20
     model_file = Introns/domV-mito-521.epn
     label      = II
@@ -322,7 +330,7 @@ Item
 EndItem
 
 Item
-    erpin_arg  = "1,13 -add 2 3 5 7 9 -logzero -5" 
+    erpin_arg  = "1,13 -add 2 3 5 7 9 -logzero -5"
     cutoff     = 25
     model_file = Introns/domV-cp-comp.epn
     label      = II(derived)
