[FIX] intron models, [FIX] path to find *.cfg file, and annot type

--- a/DOT_RNAfinder.cfg
+++ b/DOT_RNAfinder.cfg
@@ -40,10 +40,10 @@
 #--------------------------------------------------------------------------------------------------------
 
 # Used for identification of rns
-Name    = rns
-comment = rns_model
-order   = 5
-ToFus   = 0
+Name      = rns
+comment   = rns_model
+order     = 5
+ToFus     = 0
 
 # Identification rns-total:
 Item
@@ -80,10 +80,10 @@ EndItem
 #--------------------------------------------------------------------------------------------------------
 
 # Used for identification of tRNA
-Name    = tRNA
-comment = tRNA with and without intron
-order   = 1
-ToFus   = 1,0,tRNA
+Name      = tRNA
+comment   = tRNA with and without intron
+order     = 1
+ToFus     = 1,0,tRNA
 
 Item
     erpin_arg  = "-1,19 -add 1 17 18 -add 11 12 14 -add 2 3 4 5 7 -logzero -5"
@@ -130,10 +130,10 @@ EndItem
 #--------------------------------------------------------------------------------------------------------
 
 # Used for identification of rnpB
-Name    = rnpB
-comment = rnpB_model
-order   = 3
-ToFus   = 0
+Name      = rnpB
+comment   = rnpB_model
+order     = 3
+ToFus     = 0
 
 # rnpB (RNase P RNA), generale:
 Item
@@ -156,10 +156,10 @@ EndItem
 #--------------------------------------------------------------------------------------------------------
 
 # Used for identification of rrn5
-Name    = rrn5
-comment = rrn5_model
-order   = 4
-ToFus   = 0
+Name      = rrn5
+comment   = rrn5_model
+order     = 4
+ToFus     = 0
 
 # Partial:
 Item
@@ -186,10 +186,10 @@ EndItem
 #--------------------------------------------------------------------------------------------------------
 
 # Used for identification of group I introns
-Name    = IntronI
-comment = IntronI_model
-order   = 6
-ToFus   = 0
+Name      = IntronI
+comment   = IntronI_model
+order     = 6
+ToFus     = 0
 
 Item
     erpin_arg  = "2,25 -add 2 4 5 6 -add 3 8 9 10 12 17 -add 13 14 15 16 19 21 -logzero -5"
@@ -200,17 +200,17 @@ Item
 EndItem
 
 Item
-    erpin_arg  = "1,22 -add 5 6 7 -add 2 3 8 9 -add 11 12 15 16 17 18 20 21 -logzero -3"
+    erpin_arg  = "1,22 -add 5 6 7   -add 2 3 8 9  -add 11 12 15 16 17 18 20 21                 -logzero -3"
     cutoff     = 2 6 10
-    model_file = Introns/B3.epn
+    model_file = Introns/IB3-final-1Jan2022.epn
     label      = IB
     comment    = intron IB (3)
 EndItem
 
 Item
-    erpin_arg  = "2 4 5 6 -add 3 8 9 10 12 17 -add 13 14 15 16 19 21 22 -logzero -3"
+    erpin_arg  = "1,23 -add 2 4 5 6 -add 3 8 9 10 12 17 -add 13 14 15 16 19 21 22              -logzero -3"
     cutoff     = 10 15 30
-    model_file = Introns/B.epn
+    model_file = Introns/IB-final-2Dec2021.epn
     label      = IB
     comment    = intron IB (3)
 EndItem
@@ -227,7 +227,7 @@ Item
     erpin_arg  = "2,25 -add 2 4 5 6 -add 3 8 9 10 -add 12 17 -logzero -5"
     cutoff     = 8 12 28
     model_file = Introns/B-327.epn
-    label      = IB(5')
+    label      = IB(5' derived)
     comment    = intron IB (5', partial)
 EndItem
 
@@ -235,14 +235,14 @@ Item
     erpin_arg  = "2,25 -add 13 14 15 16 17 12 19 21 -logzero -5"
     cutoff     = 29
     model_file = Introns/B-327.epn
-    label      = IB(3')
+    label      = IB(3' derived)
     comment    = intron IB (3', partial)
 EndItem
 
 Item
-    erpin_arg  = "1,24 -add 2 4 5 6 7 -add 3 8 -add 10 18 15 16 17 -add 11 12 14 20 22 23 -logzero -3"
+    erpin_arg  = "1,24 -add 2 4 5 6 7  -add 3 8 -add 10 18 15 16 17 -add 11 12 14 20 22 23     -logzero -3"
     cutoff     = 2 6 8 12
-    model_file = Introns/A1.epn
+    model_file = Introns/IA1-final-2Dec2021.epn
     label      = IA1
     comment    = intron IA
 EndItem
@@ -264,9 +264,9 @@ Item
 EndItem
 
 Item
-    erpin_arg  = "1,22 -add 2 4 5 6 8 -add 9 11 15  -add 3 12 13 14 16 18 20 21 -logzero -3"
+    erpin_arg  = "1,22 -add 2 4 5 6 8 -add 9 11 15  -add 3 12 13 14 16 18 20 21                -logzero -3"
     cutoff     = 3 6 10
-    model_file = Introns/D.epn
+    model_file = Introns/ID-final-2Dec2021.epn
     label      = ID
     comment    = intron ID
 EndItem
@@ -280,9 +280,9 @@ Item
 EndItem
 
 Item
-    erpin_arg  = "1,24 -add 5 6 7 -add 4 8 10 12 13  -add 2 3 15 19 20 -add 16 17 18 22 23 -logzero -3"
+    erpin_arg  = "1,24 -add 5 6 7 -add 4 8 10 12 13  -add 2 3 15 19 20 -add 16 17 18 22 23     -logzero -3"
     cutoff     = 4 8 10 20
-    model_file = Introns/C1.epn
+    model_file = Introns/IC1-final-2Dec2021.epn
     label      = IC1
     comment    = intron IC1
 EndItem
@@ -290,15 +290,15 @@ EndItem
 Item
     erpin_arg  = "1,27 -add 4 5 6 7 9 12 -add 10 11 14 15 2 3 -add  16 17 18 19 21 22 24 25 26 -logzero -3"
     cutoff     = 6 15 17
-    model_file = Introns/C2.epn
+    model_file = Introns/IC2-final-2Dec2021.epn
     label      = IC2
     comment    = intron IC2
 EndItem
 
 Item
-    erpin_arg  = "1,23 -add 4 5 6 8 -add 9 10 12 13 -add 3 14 15 16 18 -add 19 21 22 -logzero -3"
+    erpin_arg  = "1,23 -add 4 5 6 8 -add 9 10 12 13 -add 3 14 15 16 18 -add 19 21 22           -logzero -3"
     cutoff     = 8 10 12 14
-    model_file = Introns/A3.epn
+    model_file = Introns/IA3-final-2Dec2021.epn
     label      = IA3
     comment    = intron IA3
 EndItem
@@ -316,10 +316,10 @@ EndItem
 #--------------------------------------------------------------------------------------------------------
 
 # Used for identification of group II introns
-Name    = IntronII
-comment = IntronII_model
-order   = 7
-ToFus   = 0
+Name      = IntronII
+comment   = IntronII_model
+order     = 7
+ToFus     = 0
 
 Item
     erpin_arg  = "1,13 -add 2 3 -add 5 7 9 -logzero -5"
