Add evalue cutoff and AT cutoff for tRNA (#6)
* [FIX] at_cutoff and evalue for tRNA

* [ADD] tRNA evalue on startline

--- a/DOT_RNAfinder.cfg
+++ b/DOT_RNAfinder.cfg
@@ -86,43 +86,51 @@ order     = 1
 ToFus     = 1,0,tRNA
 
 Item
-    erpin_arg  = "-1,19 -add 1 17 18 -add 11 12 14 -add 2 3 4 5 7 -logzero -5"
-    cutoff     = 2.9 8 30
-    model_file = tRNA/tRNA.epn
-    pos_ac     = 13
-    comment    = tRNAs without introns
-    gap_to_end = 13
+    erpin_arg     = "-1,19 -add 1 17 18 -add 11 12 14 -add 2 3 4 5 7 -logzero -5"
+    cutoff        = 2.9 8 30
+    model_file    = tRNA/tRNA.epn
+    pos_ac        = 13
+    comment       = tRNAs without introns
+    gap_to_end    = 13
+    evalue_cutoff = 3.4e-03
+    at_cutoff     = 36 
 EndItem
 
 Item
-    erpin_arg  = "-1,19 -add 1 17 18 -add 11 12 14 -add 2 3 4 5 7 -logzero -5"
-    cutoff     = 9 18 30
-    model_file = tRNA/yeast.epn
-    pos_ac     = 13
-    comment    = tRNAs without introns
-    gap_to_end = 13
+    erpin_arg     = "-1,19 -add 1 17 18 -add 11 12 14 -add 2 3 4 5 7 -logzero -5"
+    cutoff        = 9 18 30
+    model_file    = tRNA/yeast.epn
+    pos_ac        = 13
+    comment       = tRNAs without introns
+    gap_to_end    = 13
+    evalue_cutoff = 3.4e-03
+    at_cutoff     = 36
 EndItem
 
 Item
-    erpin_arg  = "-1,26 -add 2 3 5 7 9 -add 1 -add 24 25 -add 11 12 14 -add 16 17 18 20 -logzero -5"
-    cutoff     = 12 18 30 39 60
-    model_file = tRNA/tRNAint_mt.epn
-    pos_ac     = 13
-    comment    = tRNAs mt with intron
-    gap_to_end = 13
+    erpin_arg       = "-1,26 -add 2 3 5 7 9 -add 1 -add 24 25 -add 11 12 14 -add 16 17 18 20 -logzero -5"
+    cutoff          = 12 18 30 39 60
+    model_file      = tRNA/tRNAint_mt.epn
+    pos_ac          = 13
+    comment         = tRNAs mt with intron
+    gap_to_end      = 13
     comment_for_MFa = with intron
     to_comment      = 1
+    evalue_cutoff   = 3.4e-03
+    at_cutoff       = 36
 EndItem
 
 Item
-    erpin_arg  = "-1,26 -add 2 3 5 7 9 -add 1 -add 24 25 -add 11 12 14 -add 16 17 18 20 -logzero -5"
-    cutoff     = 12 18 30 39 60
-    model_file = tRNA/tRNAint_cp.epn
-    pos_ac     = 13
-    comment    = tRNAs cp with intron
-    gap_to_end = 13
+    erpin_arg       = "-1,26 -add 2 3 5 7 9 -add 1 -add 24 25 -add 11 12 14 -add 16 17 18 20 -logzero -5"
+    cutoff          = 12 18 30 39 60
+    model_file      = tRNA/tRNAint_cp.epn
+    pos_ac          = 13
+    comment         = tRNAs cp with intron
+    gap_to_end      = 13
     comment_for_MFa = with intron
     to_comment      = 1
+    evalue_cutoff   = 3.4e-03
+    at_cutoff       = 36
 EndItem
 
 #--------------------------------------------------------------------------------------------------------
